package com.wallaceespindola.reportcomposer.domain;

public enum WorkUnitStatus {
    PENDING,
    RUNNING,
    COMPLETED,
    FAILED
}
